--- a/package.json
+++ b/package.json
@@ -13,24 +13,38 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "better-auth": "^1.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
     "hono": "^4.10.7",
     "lucide-react": "^0.555.0",
+    "nanoid": "^5.1.6",
     "postgres": "^3.4.7",
     "react": "19.2.0",
+    "react-day-picker": "^9.12.0",
     "react-dom": "19.2.0",
+    "react-hook-form": "^7.68.0",
     "react-server-dom-webpack": "19.2.0",
+    "recharts": "2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vite": "^7.2.6",
-    "waku": "0.27.2"
+    "waku": "0.27.2",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.17",
