--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.68.0",
     "react-server-dom-webpack": "19.2.0",
-    "recharts": "2.15.4",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
