chore: sitemap robots.txt 수정, docker file에서 env 추가

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,3 +29,9 @@ jobs:
           tags: dos07008/asset-log:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            DATABASE_URL=${{ secrets.DATABASE_URL }}
+            BETTER_AUTH_SECRET=${{ secrets.BETTER_AUTH_SECRET }}
+            BETTER_AUTH_URL=${{ secrets.BETTER_AUTH_URL }}
+            GOOGLE_CLIENT_ID=${{ secrets.GOOGLE_CLIENT_ID }}
+            GOOGLE_CLIENT_SECRET=${{ secrets.GOOGLE_CLIENT_SECRET }}
