--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "waku dev",
-    "build": "waku build",
-    "start": "waku start",
+    "dev": "next dev --turbopack",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -31,35 +32,26 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
-    "hono": "^4.10.7",
     "lucide-react": "^0.555.0",
     "nanoid": "^5.1.6",
+    "next": "16.1.1",
     "postgres": "^3.4.7",
     "react": "19.2.3",
     "react-day-picker": "^9.12.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.68.0",
-    "react-server-dom-webpack": "19.2.3",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^7.2.6",
-    "waku": "0.27.5",
     "zod": "^4.1.13"
   },
-  "pnpm": {
-    "overrides": {
-      "vite": "^7.2.6"
-    }
-  },
   "devDependencies": {
-    "@tailwindcss/vite": "4.1.17",
+    "schema-dts": "^1.1.5",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
-    "@vitejs/plugin-react": "5.1.2",
-    "babel-plugin-react-compiler": "1.0.0",
     "drizzle-kit": "^0.31.8",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3"
