--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.45.0",
+    "jotai": "^2.16.2",
     "lucide-react": "^0.555.0",
     "nanoid": "^5.1.6",
     "next": "16.1.1",
